src/FinancialForce Accounting/objects/CancelPaymentLog__c.object
<CustomObject>
    <customHelpPage>codahelpcancelpaymentlog</customHelpPage>
    <description>This is an error that occurs when a cancel payment process is performed. This error is linked to a Payment Account Line Item (Payment Summary Line)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelPayment__c</fullName>
        <label>Cancel Payment Control</label>
        <referenceTo>CancelPayment__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Cancel Payment Logs</relationshipLabel>
        <relationshipName>CancelPaymentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cancel Payment Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cancel Payment Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancel Payment Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>